--- a/books.html
+++ b/books.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-top sticky-top ">
         <div class="container-fluid">
           <div class=" d-flex" >
-            <img src="/img/logo.jpg" alt="" class="offset-1 " style="height: 40px; width:50px; opacity: 0.7; margin-left: 10px;" >
+            <img src="img/logo.jpg" alt="" class="offset-1 " style="height: 40px; width:50px; opacity: 0.7; margin-left: 10px;" >
 
               <h1 class="navbar-brand mt-1" style="font-family:'Poppins', sans-serif ;">Mahallenizin Kitapçısı</h1>
           </div>
@@ -58,13 +58,13 @@
       <div class="container ">
         <div class="row mt-3">
           <div class="col-4">
-            <img src="/img/3.jpg" alt="" style="width: 80%; opacity: 0.8 ;">
+            <img src="img/3.jpg" alt="" style="width: 80%; opacity: 0.8 ;">
           </div>
           <div class="col-4">
-            <img src="/img/12.jpg" alt="" style="width: 80%; opacity: 0.8;">
+            <img src="img/12.jpg" alt="" style="width: 80%; opacity: 0.8;">
           </div>
           <div class="col-4">
-            <img src="/img/2.jpg" alt="" style="width: 80%; opacity: 0.8;">
+            <img src="img/2.jpg" alt="" style="width: 80%; opacity: 0.8;">
           </div>
         </div>
         
@@ -75,7 +75,7 @@
                     <div class="col-4 d-flex w-100  ">
                         <div class=" me-5 pt-2  w-25  ">
                             <div class="book-list">
-                                <img src="/img/mahser.jpg" alt="" style="width: 100px ;">
+                                <img src="img/mahser.jpg" alt="" style="width: 100px ;">
                                 <p><b>Yazar:</b> Stephen King <br>
                                     <b>Kitap İsmi:</b> Mahşer <br>
                                     <b>Ücret:</b> 75 Türk Lirası
@@ -85,7 +85,7 @@
                         </div>
                         <div class=" me-5 ms-5 pt-2 w-25">
                             <div class="book-list">
-                                <img src="/img/o.jpg" alt="" style="width: 100px ;">
+                                <img src="img/o.jpg" alt="" style="width: 100px ;">
                                 <p><b>Yazar:</b> Stephen King <br>
                                     <b>Kitap İsmi:</b> O <br>
                                     <b>Ücret:</b> 100 Türk Lirası
@@ -95,7 +95,7 @@
                         </div>
                         <div class=" ms-5 pt-2 w-25 ">
                             <div class="book-list">
-                                <img src="/img/sis.jpg" alt="" style="width: 100px ;">
+                                <img src="img/sis.jpg" alt="" style="width: 100px ;">
                                 <p><b>Yazar:</b> Stephen King <br>
                                     <b>Kitap İsmi:</b> Sis <br>
                                     <b>Ücret:</b> 90 Türk Lirası
@@ -110,7 +110,7 @@
                     <div class="col-4 d-flex w-100 ">
                         <div class=" me-5 pt-2  w-25">
                             <div class="sale book-list ">
-                                <img src="/img/uykusuzluk.jpeg" alt="" style="width: 100px ;">
+                                <img src="img/uykusuzluk.jpeg" alt="" style="width: 100px ;">
                                 <p><b>Yazar:</b> Stephen King <br>
                                     <b>Kitap İsmi:</b> Uykusuzluk <br>
                                     <b>Ücret:</b> <span class="text-decoration-line-through text-muted">100 Türk Lirası</span> <br> 75 Türk Lirası
@@ -120,7 +120,7 @@
                         </div>
                         <div class=" me-5 ms-5 pt-4 w-25">
                             <div class="book-list">
-                                <img src="/img/yabanci.jpg" alt="" style="width: 100px ;">
+                                <img src="img/yabanci.jpg" alt="" style="width: 100px ;">
                                 <p><b>Yazar:</b> Stephen King <br>
                                     <b>Kitap İsmi:</b> Yabancı <br>
                                     <b>Ücret:</b> 100 Türk Lirası
@@ -130,7 +130,7 @@
                         </div>
                         <div class=" ms-5 pt-4 w-25 ">
                             <div class="book-list">
-                                <img src="/img/yukselis.jpg" alt="" style="width: 103px ;">
+                                <img src="img/yukselis.jpg" alt="" style="width: 103px ;">
                                 <p><b>Yazar:</b> Stephen King <br>
                                     <b>Kitap İsmi:</b> Yükseliş <br>
                                     <b>Ücret:</b> 90 Türk Lirası
@@ -149,7 +149,7 @@
             <div class="right-col   " style="height: 75%; margin: auto;">
               <h3 class="mt-4 text-center ">Günün Fırsatı </h3>
             <div class=" text-center   ">
-              <img src="/img/uykusuzluk.jpeg" alt="" class="w-50" >
+              <img src="img/uykusuzluk.jpeg" alt="" class="w-50" >
             </div>
             <div class=" w-50  offset-3 text-center mt-2 " style="height: 75px ;">
               <p>Uykusuzluk
