--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-top sticky-top ">
         <div class="container-fluid">
           <div class=" d-flex" >
-            <img src="/img/logo.jpg" alt="" class="offset-1 " style="height: 40px; width:50px; opacity: 0.7; margin-left: 10px;" >
+            <img src="img/logo.jpg" alt="" class="offset-1 " style="height: 40px; width:50px; opacity: 0.7; margin-left: 10px;" >
 
               <h1 class="navbar-brand mt-1" style="font-family:'Poppins', sans-serif ;">Mahallenizin Kitapçısı</h1>
           </div>
@@ -58,13 +58,13 @@
       <div class="container ">
         <div class="row mt-3">
           <div class="col-4">
-            <img src="/img/3.jpg" alt="" style="width: 80%; opacity: 0.8 ;">
+            <img src="img/3.jpg" alt="" style="width: 80%; opacity: 0.8 ;">
           </div>
           <div class="col-4">
-            <img src="/img/12.jpg" alt="" style="width: 80%; opacity: 0.8;">
+            <img src="img/12.jpg" alt="" style="width: 80%; opacity: 0.8;">
           </div>
           <div class="col-4">
-            <img src="/img/2.jpg" alt="" style="width: 80%; opacity: 0.8;">
+            <img src="img/2.jpg" alt="" style="width: 80%; opacity: 0.8;">
           </div>
         </div>
         <div class="mt-5">
@@ -107,7 +107,7 @@
             <div class="right-col  " style="height: 100%;">
               <h3 class="mt-4 text-center ">Günün Fırsatı </h3>
             <div class=" text-center   ">
-              <img src="../img/uykusuzluk.jpeg" alt="" class="w-50" >
+              <img src="img/uykusuzluk.jpeg" alt="" class="w-50" >
             </div>
             <div class=" w-50  offset-3 text-center mt-2 " style="height: 75px ;">
               <p>Uykusuzluk
